--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
       <section class="section hero">
         <div class="container hero-container">
           <h1 class="title">Ефективні рішення для вашого бізнесу</h1>
-          <button class="btn" type="button" data-modal-open>Замовити послугу</button>
+          <button class="btn" type="button" data-modal-open>
+            Замовити послугу
+          </button>
         </div>
       </section>
       <!-- особливості -->
@@ -134,7 +136,7 @@
               </div>
             </li>
             <li class="list-item activity-item">
-                <div class="activity-wrap">
+              <div class="activity-wrap">
                 <img
                   width="370"
                   src="./images/studio/service-2.jpg"
@@ -615,6 +617,48 @@
             <use href="./images/sprite.svg#icon-close"></use>
           </svg>
         </button>
+        <h2 class="modal-title">Залиште свої дані, ми вам передзвонимо</h2>
+        <form name="modal-form" class="form-modal" autocomplete="on" novalidate>
+          <label class="form-label">
+            <span class="label-title">Ім'я</span> 
+            <div class="form-wrap">
+              <input type="name" name="personal-info" class="form-input" />
+              <svg class="modal-icon" width="12" height="12">
+                <use href="./images/sprite.svg#icon-name-form"></use>
+              </svg>
+            </div>
+          </label>
+          <label class="form-label">
+            <span class="label-title">Телефон</span> 
+            <div class="form-wrap">
+              <input type="tel" name="tel" class="form-input" />
+              <svg class="modal-icon" width="13" height="13">
+                <use href="./images/sprite.svg#icon-tel-form"></use>
+              </svg>
+            </div>
+          </label>
+          <label class="form-label">
+            <span class="label-title">Пошта</span> 
+            <div class="form-wrap">
+              <input type="mail" name="mail" class="form-input" />
+              <svg class="modal-icon" width="15" height="12">
+                <use href="./images/sprite.svg#icon-mail-form"></use>
+              </svg>
+            </div>
+          </label>
+          <label class="form-label">
+            <span class="label-title">Коментар</span> 
+            <textarea
+              name="comment"
+              rows="10"
+              placeholder="Введіть текст"
+            ></textarea>
+          </label>
+          <input type="checkbox" />
+          <p>Погоджуюся з розсилкою та приймаю</p>
+          <a href="" target="_blank">Умови договору</a>
+          <button type="submit">Відправити</button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
