--- a/potfolio.html
+++ b/potfolio.html
@@ -393,6 +393,34 @@
             </li>
           </ul>
         </div>
+        <div class="subscribe">
+          <form
+            name="subscribe-form"
+            class="form-subscribe"
+            autocomplete="on"
+            novalidate
+          >
+            <label>
+              <span class="footer-title submit-title"
+                >Підпишіться на розсилку</span
+              >
+            </label>
+            <div class="subscribe-wrap">
+              <input
+                type="email"
+                name="email"
+                class="subscribe-input"
+                placeholder="E-mail"
+              />
+              <button type="submit" class="btn btn-subscribe">
+                <span>Підписатися</span>
+                <svg width="24" height="24" class="icon-subscribe">
+                  <use href="./images/sprite.svg#icon-send"></use>
+                </svg>
+              </button>
+            </div>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
