--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
                 placeholder="E-mail"
               />
               <button type="submit" class="btn btn-subscribe">
-                <span>Підписатися</span>
+                Підписатися
                 <svg width="24" height="24" class="icon-subscribe">
                   <use href="./images/sprite.svg#icon-send"></use>
                 </svg>
@@ -645,7 +645,7 @@
             <use href="./images/sprite.svg#icon-close"></use>
           </svg>
         </button>
-        <h2 class="modal-title">Залиште свої дані, ми вам передзвонимо</h2>
+        <p class="modal-title">Залиште свої дані, ми вам передзвонимо</p>
         <div class="form-container">
           <form
             name="modal-form"
